--- a/Events.html
+++ b/Events.html
@@ -78,9 +78,9 @@
 
 <body style="font-family:'Lato';">
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#707070;opacity: 0.5;">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#272727;opacity: 0.8;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#">
                 <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
             </a>
             <div class="navbar-header">
@@ -98,16 +98,18 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
+                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeam" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             OUR TEAM
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
+                        <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
                             <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-                            <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
                             <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
                         </div>
                     </li>
@@ -129,6 +131,112 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
         <tr>
             <td colspan="2">
+                <h5><mark>Gayaka Sarvabhouma Jayanthi celebrations day 1</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fvideos%2F3653471458030170%2F&show_text=false&width=560"
+                    style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
+                    frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                    allowFullScreen="true"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br /> Celebrating the great Parupalli school of music, the guru parampara!!<br /><br />
+                Concert by Shri.Vishnupriya, a student of Sangeetha Bharathi School of Music!
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Gayaka Sarvabhouma Jayanthi celebrations day 2</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fvideos%2F3656096297767686%2F&show_text=false&width=560"
+                    style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
+                    frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                    allowFullScreen="true"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br /> Celebrating the great Parupalli school of music, the guru parampara!!
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Gayaka Sarvabhouma Jayanthi celebrations day 3</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fposts%2F3660096590700990&show_text=true&width=552&height=592&appId"
+                    style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
+                    frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Thyagaraja swami explained the origin and form of music in his famous kriti 'Nada tanum
+                anisham Sankaram' <br />
+                where in he states music is personified in form on Lord Sankara and all the octaves have originated
+                from his 5 faces <br />
+                'Sadyo jathadi Pancha vaktraja, SRGMPDN vara sapta swara' and our guru <br /><b>Nadasudharnava sri.
+                    Annavarapu Ramaswami garu </b><br />
+                the pioneer of Great Parupalli school of music has shown us the living example of above lines and
+                proved that he is <br />
+                human form of Nada at the age of 96. <br /><br />
+
+                Pls watch personified music himself. They say that you can know Lord shiva only when you become Shiva
+                in famous chants of Rydram. <br />
+                Thus our guru proved that he has become Lord Sankara in the firm of music🙏🙏🙏🙏<br />
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>The World Music conference 2020</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fposts%2F3667930049917644&show_text=true&width=552&height=589&appId"
+                    style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
+                    frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />The World Music conference 2020 - Dr.Padma Govardhan's presentation on <br />
+                <b> "Therapeutic effects of music through the eyes of a musician"</b>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>YSM Australia - Margazhi Utsavam 2020</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fposts%2F3673314696045846&show_text=true&width=552&height=484&appId"
+                    style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
+                    frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Yuva Sangeetha Margam - Margazhi Utsavam 2020 - Dr.Padma Govardhan Concert
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Gandhi Jayanthi Special</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe class="embed-responsive-item" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    src="https://www.youtube.com/embed/miT8r31Z5SY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Gandhi Jayanthi Special
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
                 <h5><mark>Gayathri Mahila Sangeetha Sanmandali Concert</mark></h5>
                 <i>By Dr.Padma Govardhan</i>
             </td>
@@ -145,27 +253,26 @@
             </td>
         </tr>
         <tr>
-                <td colspan="2">
-                    <h5><mark>Global Rudra Parayana Concert</mark></h5>
-                    <i>By Dr.Padma Govardhan <small>accompanied by Balu Mallela</small></i>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
-                        src="images/ConcertRudra.jpeg">
-                </td>
-                <td style="vertical-align:center;text-align:justify;">
-                    <br /><br />Musical offering by Dr.Padma Govardhan at this event.
-                    <br/><br/>
+            <td colspan="2">
+                <h5><mark>Global Rudra Parayana Concert</mark></h5>
+                <i>By Dr.Padma Govardhan <small>accompanied by Balu Mallela</small></i>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    src="images/ConcertRudra.jpeg">
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <br /><br />Musical offering by Dr.Padma Govardhan at this event.
+                <br /><br />
                 <button style="border-radius: 14px;">
-                        <a href="https://youtu.be/PAP88TPE_T4" style="color:rgb(40, 40, 153);"
-                            target="_blank">
-                            Listen on YouTube
-                        </a>
-                    </button>
-                </td>
-            </tr>
+                    <a href="https://youtu.be/PAP88TPE_T4" style="color:rgb(40, 40, 153);" target="_blank">
+                        Listen on YouTube
+                    </a>
+                </button>
+            </td>
+        </tr>
         <tr>
             <td colspan="2">
                 <h5><mark>Mallela Maala - Sravana Maasam Special</mark></h5>
@@ -178,18 +285,18 @@
                     allowfullscreen style="box-shadow: 2px 2px 3px pink;border-radius: 14px;"></iframe>
             </td>
             <td style="vertical-align:center;text-align:justify;">
-                <br /><br />Mallela Maala is a weekly radio program focusing on a different musician, 
-                actor or film each week, providing insights into some of your favourite Telugu tracks. 
-                <br /><br />This program also focusses on special occasions and festivals to present great musical treats to listeners.
-                <br /><br />Varalakshmi Sravana special program has great songs sung by  Dr.Padma
+                <br /><br />Mallela Maala is a weekly radio program focusing on a different musician,
+                actor or film each week, providing insights into some of your favourite Telugu tracks.
+                <br /><br />This program also focusses on special occasions and festivals to present great musical
+                treats to listeners.
+                <br /><br />Varalakshmi Sravana special program has great songs sung by Dr.Padma
                 Govardhan and VishnuPriya.
-                <br/><br/>
+                <br /><br />
                 <button style="border-radius: 14px;">
-                        <a href="https://www.youtube.com/embed/bwlV6Au1gUo" style="color:rgb(40, 40, 153);"
-                            target="_blank">
-                            Listen on YouTube
-                        </a>
-                    </button>
+                    <a href="https://www.youtube.com/embed/bwlV6Au1gUo" style="color:rgb(40, 40, 153);" target="_blank">
+                        Listen on YouTube
+                    </a>
+                </button>
             </td>
         </tr>
         <tr>
@@ -205,42 +312,45 @@
             <td style="text-align:justify;">
                 <ul>
                     <li>
-                        Shri.Annavarapu Ramaswamy - Speech</li><li>
+                        Shri.Annavarapu Ramaswamy - Speech</li>
+                    <li>
                         Sravani & Sudheeksha - Aabala Gopalam & Ganadhipam
                     </li>
                     <li>
-                        Balu Mallela - Thamra Lochani & OmKaaraakaarini</li><li>
+                        Balu Mallela - Thamra Lochani & OmKaaraakaarini</li>
+                    <li>
                         Mrs.Pratyusha - Saragunagaavumu & Sarasaangi
                     </li>
                     <li>
                         Mrs.Sridevi - Akhiladevanuthe - Megharanjani & O Paradevi - Mohana
                     </li>
-                        <li>
+                    <li>
                         Mrs.Vishnu Priya - Sogasu nee Sommu & Ganarasike
                     </li>
                     <li>
-                            Mrs.Thulasi Viswanath - Amma anandadaayini & Natabhairavi - Nalina nayani
-                    </li><li>
-                            Mrs.Durgabhavani - Vasama - Dharmavati & Ragavardhini - Ganasudha rasam
-                        </li><li>
-                            Shri.Modumudi Sudhakar - Bhavame mahabhaagyamura & Chandrika
-                        </li>
+                        Mrs.Thulasi Viswanath - Amma anandadaayini & Natabhairavi - Nalina nayani
+                    </li>
                     <li>
-                            Shri.D.V.Mohana Krishna - Tharani raaga kirthana & Bahudaari Thillana
-                        </li>
+                        Mrs.Durgabhavani - Vasama - Dharmavati & Ragavardhini - Ganasudha rasam
+                    </li>
                     <li>
-                             Purnima - Brundavani thillana,
-                            Mahati - Sri Sakala ganaadhipa,
-                            Sreya Durvasula - Brundavani thillana
+                        Shri.Modumudi Sudhakar - Bhavame mahabhaagyamura & Chandrika
+                    </li>
+                    <li>
+                        Shri.D.V.Mohana Krishna - Tharani raaga kirthana & Bahudaari Thillana
+                    </li>
+                    <li>
+                        Purnima - Brundavani thillana,
+                        Mahati - Sri Sakala ganaadhipa,
+                        Sreya Durvasula - Brundavani thillana
                     </li>
                 </ul>&nbsp;
-                
-            <button style="border-radius: 14px;">
-                <a href="https://www.youtube.com/watch?v=uUsKsmggEBY" style="color:rgb(40, 40, 153);"
-                    target="_blank">
-                    Listen on YouTube
-                </a>
-            </button>
+
+                <button style="border-radius: 14px;">
+                    <a href="https://www.youtube.com/watch?v=uUsKsmggEBY" style="color:rgb(40, 40, 153);" target="_blank">
+                        Listen on YouTube
+                    </a>
+                </button>
 
             </td>
         </tr>
@@ -326,13 +436,12 @@
                 today.
                 <br /><br /><br />Janaranjani Varnam by Tiger K.Varadaacharyulu was one of the many gems that Dr.Padma
                 Govardhan has given to the world of Carnatic Music.
-                <br/><br/>
+                <br /><br />
                 <button style="border-radius: 14px;">
-                        <a href="https://www.youtube.com/embed/Cn-W75cDoKo" style="color:rgb(40, 40, 153);"
-                            target="_blank">
-                            Listen on YouTube
-                        </a>
-                    </button>
+                    <a href="https://www.youtube.com/embed/Cn-W75cDoKo" style="color:rgb(40, 40, 153);" target="_blank">
+                        Listen on YouTube
+                    </a>
+                </button>
             </td>
         </tr>
         <tr>
@@ -354,13 +463,13 @@
                 <br /><br /><br /><br />This event has been recorded.
                 <br />Please enjoy the event with link provided here.
                 <br />
-                    <br/>
+                <br />
                 <button style="border-radius: 14px;">
-                        <a href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925" style="color:rgb(40, 40, 153);"
-                            target="_blank">
-                            Listen to Zoom Recording
-                        </a>
-                    </button>
+                    <a href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925"
+                        style="color:rgb(40, 40, 153);" target="_blank">
+                        Listen to Zoom Recording
+                    </a>
+                </button>
             </td>
         </tr>
     </table>
