--- a/Photos.html
+++ b/Photos.html
@@ -78,9 +78,9 @@
 
 <body style="font-family:'Lato';">
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#707070;opacity: 0.5;">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#272727;opacity: 0.8;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#">
                 <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
             </a>
             <div class="navbar-header">
@@ -98,16 +98,19 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
+                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeam" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             OUR TEAM
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
+                        <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
                             <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-                            <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
+                            <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -134,7 +137,7 @@
             <td>
                 <img src="images/Exam1.jpeg" alt="Music Exam" class="img-fluid" style="width:250px;height:250px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
-       
+
             <td>
                 <img src="images/Exam2.jpeg" alt="Music Exam" class="img-fluid " style="width:250px;height:250px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
@@ -143,13 +146,38 @@
             <td>
                 <img src="images/Exam5.jpeg" alt="Music Exam" class="img-fluid " style="width:250px;height:250px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
-        
+
             <td>
                 <img src="images/Exam4.jpeg" alt="Music Exam" class="img-fluid " style="width:250px;height:250px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
         </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Annamayya Padahela -2018 </mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D817600498442362%26set%3Da.817574728444939&show_text=true&width=552&height=368&appId"
+                    width="552" height="368" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></td>
+            <td><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D817610468441365%26set%3Da.817574728444939&show_text=true&width=552&height=368&appId"
+                    width="552" height="368" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></td>
+        </tr>
+        <tr>
+                <td colspan="2">
+                    <h5><mark>Bala Muraleeyam</mark></h5>
+                </td>
+            </tr>
+        <tr>
+            <td>
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsangeetha.bharathi%2Fposts%2F694129810789432&show_text=true&width=552&height=310&appId" width="552" height="310" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </td>
+            <td>
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D556916837844064%26set%3Da.556899324512482&show_text=true&width=552&height=497&appId" width="552" height="497" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </td>
+        </tr>
     </table>
-
     <!-- The expanding image container -->
     <div class="container">
         <!-- Close the image -->
