--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
           </li>
         </ul>
         <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
+            </li>
           <li class="nav-item">
             <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
           </li>
@@ -105,7 +108,6 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
               <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-              <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
               <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
             </div>
           </li>
@@ -129,13 +131,7 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                  <div class="centered embed-responsive embed-responsive-1by1">
-                  Gandhi Jayanthi Special
-                  <iframe class="embed-responsive-item" width="1250" height="900" src="https://www.youtube.com/embed/miT8r31Z5SY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-              </div>
-            <div class="carousel-item ">
+            <div class="carousel-item active">
               <div class="centered embed-responsive embed-responsive-1by1">
               Swara Raaga Sudha - Soulful Music
               <iframe class="embed-responsive-item" width="1250" height="900" src="https://www.youtube.com/embed/KNky3NJMSQo" frameborder="0" 
