--- a/AboutUs.html
+++ b/AboutUs.html
@@ -80,9 +80,9 @@
 
 <body style="font-family:'Lato';">
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#707070;opacity: 0.5;">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#272727;opacity: 0.8;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#">
                 <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
             </a>
             <div class="navbar-header">
@@ -100,16 +100,18 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
+                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeam" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             OUR TEAM
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
+                        <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
                             <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-                            <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
                             <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
                         </div>
                     </li>
