--- a/OurTeam.html
+++ b/OurTeam.html
@@ -79,43 +79,47 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#707070;opacity: 0.5;">
-        <a class="navbar-brand" href="index.html">
-            <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
-        </a>
-        <div class="navbar-header">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarCollapse" style="font-family:'Lato';">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html"><b>SANGEETHA BHARATHI NZ </b></a>
-                    &nbsp;&nbsp; <small style="color:#FFFFFF;"><i>A School of Carnatic Music</i></small>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeamE" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        OUR TEAM
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarOurTeamE">
-                        <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
-                        <a class="dropdown-item" href="Events.html">VIEW OUR EVENTS</a>
-                        <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#272727;opacity: 0.8;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
+            </a>
+            <div class="navbar-header">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html"><b>SANGEETHA BHARATHI NZ </b></a>
+                        &nbsp;&nbsp; <small style="color:#FFFFFF;"><i>A School of Carnatic Music</i></small>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a style="color:#FFFFFF;" class="nav-link dropdown-toggle" href="#" id="navbarOurTeam" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            OUR TEAM
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarOurTeam">
+                            <a class="dropdown-item" href="OurTeam.html">MEET OUR TEAM</a>
+                            <a class="dropdown-item" href="Photos.html">PHOTOS & PICTURES</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
+                    </li>
+                </ul>
 
+            </div>
         </div>
     </nav>
 
