--- a/Events.html
+++ b/Events.html
@@ -143,7 +143,7 @@
             </td>
             <td style="vertical-align:center;text-align:justify;">
                 <br /><br /> Celebrating the great Parupalli school of music, the guru parampara!!<br /><br />
-                Concert by Shri.Vishnupriya, a student of Sangeetha Bharathi School of Music!
+                Concert by Vishnupriya, a student of Sangeetha Bharathi School of Music!
             </td>
         </tr>
         <tr>
