--- a/Events.html
+++ b/Events.html
@@ -129,50 +129,68 @@
     </div>
 
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
-            <tr>
-                    <td colspan="2">
-                        <h5><mark>Raga Priya Margazhi 2020 Performance</mark></h5>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <iframe src="https://www.youtube.com/embed/sZo_J_TqCRY"
-                            style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
-                            frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-                            allowFullScreen="true"></iframe>
-                    </td>
-                    <td style="vertical-align:center;text-align:justify;">
-                        1. ituvaNTi samayana, saranga, khanda chapu, Vina Kuppayyar <br/>
-                        2. nannu brOvAnika (venkatESa pancaratnam), mukhAri, Adi, Vina Kuppayyar <br/>
-                        Vina Kuppayyar was a distinguished disciple of Tyagaraja who lived from c1798 to c1904. Although famous for his varnams (in begada, bilahari, etc), he has composed many krithis as well as divyanAma kirtanams on Lord Krishna. 
-                        The Venkatesa pancharatna are sometimes wrongly attributed to Saint Thyagaraja. The five compistions on Lord Venkateswara by Vina Kuppayyar are:
-                        <ul>
-                        <li>nIvE gatiyani-darbAr-ADi</li>
-                        <li>bAgumIraganu nAtO-shankarAbharaNa-rUpaka</li>
-                        <li>mammu brOcu-simhEndramadhyam-Adi</li>
-                        <li>nannu brOvanika-mukhAri-Adi</li>
-                        <li>sarOjAkSuni-sAvEri-rUpaka</li>
-                        </ul>
-                        The composition in mukhari has poetic beauty and features muktayi swaram after anupallavi and a madhyamakala passage after charanam.
-                    </td>
-                </tr>
-                <tr>
-                        <td colspan="2">
-                            <h5><mark>Swara Raaga Sudha</mark></h5>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <iframe src="https://www.youtube.com/embed/KNky3NJMSQo"
-                                style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;" scrolling="no"
-                                frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-                                allowFullScreen="true"></iframe>
-                        </td>
-                        <td style="vertical-align:center;text-align:justify;"><br/><br/>
-                            Beautiful rendition of Sankarabharanam.<br/>
-                            A great video for all music lovers.<br/>
-                        </td>
-                    </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Siva Padam 2020 Performance</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.youtube.com/embed/X0J1RlK0-nY" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                    allowFullScreen="true"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                    Sri Samavedam Garu wrote over thousand keerthanas on Lord Siva,he has completed this incredible task with each utterance being a grace of Lord Siva. <br/>
+                    Dr. Padma Mallela presents us with Mahananda song from Siva Padam.<br/>                    
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Raga Priya Margazhi 2020 Performance</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.youtube.com/embed/sZo_J_TqCRY" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                    allowFullScreen="true"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                1. ituvaNTi samayana, saranga, khanda chapu, Vina Kuppayyar <br />
+                2. nannu brOvAnika (venkatESa pancaratnam), mukhAri, Adi, Vina Kuppayyar <br />
+                Vina Kuppayyar was a distinguished disciple of Tyagaraja who lived from c1798 to c1904. Although famous
+                for his varnams (in begada, bilahari, etc), he has composed many krithis as well as divyanAma kirtanams
+                on Lord Krishna.
+                The Venkatesa pancharatna are sometimes wrongly attributed to Saint Thyagaraja. The five compistions on
+                Lord Venkateswara by Vina Kuppayyar are:
+                <ul>
+                    <li>nIvE gatiyani-darbAr-ADi</li>
+                    <li>bAgumIraganu nAtO-shankarAbharaNa-rUpaka</li>
+                    <li>mammu brOcu-simhEndramadhyam-Adi</li>
+                    <li>nannu brOvanika-mukhAri-Adi</li>
+                    <li>sarOjAkSuni-sAvEri-rUpaka</li>
+                </ul>
+                The composition in mukhari has poetic beauty and features muktayi swaram after anupallavi and a
+                madhyamakala passage after charanam.
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Swara Raaga Sudha</mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <iframe src="https://www.youtube.com/embed/KNky3NJMSQo" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                    scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                    allowFullScreen="true"></iframe>
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                Beautiful rendition of Sankarabharanam.<br />
+                A great video for all music lovers.<br />
+            </td>
+        </tr>
         <tr>
             <td colspan="2">
                 <h5><mark>Gayaka Sarvabhouma Jayanthi celebrations day 1</mark></h5>
