--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="Events.html" style="color:#FFFFFF;">VIEW OUR EVENTS</a>
-            </li>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="AboutUs.html" style="color:#FFFFFF;">ABOUT US</a>
           </li>
@@ -128,21 +128,9 @@
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div class="centered embed-responsive embed-responsive-1by1">
-              Ragapriya Margazhi concert
-              <iframe  class="embed-responsive-item" width="850" height="500" src="https://www.youtube.com/embed/sZo_J_TqCRY" frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-              style="box-shadow: 2px 2px 3px rgb(65, 63, 63);border-radius: 14px;"></iframe>
-              <!--iframe class="embed-responsive-item" width="850" height="500" src="https://www.youtube.com/embed/sZo_J_TqCRY" frameborder="0" 
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-              style="box-shadow: 2px 2px 3px rgb(65, 63, 63);border-radius: 14px;"></iframe>-->
-            </div>
-          </div>
-            <div class="carousel-item">
               <div>
 
                 <a href="AboutUs.html">
@@ -206,9 +194,12 @@
                         <b>Spreading Our Wings
                       </p>
                       <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
-                        <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back in Auckland, New Zealand. 
-                          <br/>Over the years, it grew like a river with a prestige that students live music when they learn at Sangeetha Bharathi. 
-                          <br/>Now Sangeetha Bharathi has more then 100 students spread across oceans and learning music with devotion and dedication.</i>
+                        <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back
+                          in Auckland, New Zealand.
+                          <br />Over the years, it grew like a river with a prestige that students live music when they
+                          learn at Sangeetha Bharathi.
+                          <br />Now Sangeetha Bharathi has more then 100 students spread across oceans and learning
+                          music with devotion and dedication.</i>
                         </b>
                       </p>
                     </div>
@@ -216,6 +207,7 @@
                 </a>
               </div>
             </div>
+            
           </div>
           <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
