--- a/Events.html
+++ b/Events.html
@@ -248,7 +248,7 @@
 
                 Pls watch personified music himself. They say that you can know Lord shiva only when you become Shiva
                 in famous chants of Rydram. <br />
-                Thus our guru proved that he has become Lord Sankara in the firm of music🙏🙏🙏🙏<br />
+                Thus our guru proved that he has become Lord Sankara in the firm of music🙝🙝🙝🙝<br />
             </td>
         </tr>
         <tr>
@@ -539,7 +539,7 @@
     <!-- FOOTER -->
     <footer class="container-fluid">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2004-2021 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 
 </body>
