--- a/OurTeam.html
+++ b/OurTeam.html
@@ -219,7 +219,7 @@
                     completing her Graduate Diploma under Academy of fine Arts (London).
                     She then underwent advanced training for 12 years under Dr. Mangalampally Balamuralikrishna
                     and simultaneously trained under Dr. Radha Venkatachalam from Delhi.
-                    She currently heads the Sweden Chapter of Sangeetha Bharathi.<br />
+                    She currently heads the Sweden Chapter of Sangeetha Bharathi. <a href="VishnuPriya.html">More about Vishnu Priya</a><br />
                     <br />Souncloud: <a href="https://soundcloud.com/vpmallela" target="_blank">Vishnu's works</a>
                     <br />Youtube Channel: <a href="https://www.youtube.com/user/p4mancegal/" target="_blank">Mind
                         Music Soul</a>
@@ -247,7 +247,7 @@
     <!-- FOOTER -->
     <footer class="container-fluid">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2004-2021 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
     </main>
 
