Prapancha sangeetha sammelan 2021 changes

--- a/Events.html
+++ b/Events.html
@@ -129,6 +129,26 @@
     </div>
 
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
+            <tr>
+                    <td colspan="2">
+                        <h5><mark>Prapancha Sangeetha Sammelan - 2021 </mark></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                            <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                            src="images/PrapanchaSangeethaSammelan2021.jpeg">
+                    </td>
+                    <td style="vertical-align:center;text-align:justify;">
+                        A panel of young music enthusiasts as well as Senior professional experts will share their <br/>
+                        musical experiences and insights. Excited? Then join us on June 27th 2021 from 3p.m - 5:30 p.m<br/>
+                        <br/>
+                        <br/>
+                        
+                        <a href="https://utsmeet.zoom.us/j/84978179976">Click here to connect to the Zoom Meeting</a>
+                        <br/>                    
+                    </td>
+                </tr>
         <tr>
             <td colspan="2">
                 <h5><mark>Siva Padam 2020 Performance</mark></h5>
