--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
+              <div class="carousel-item active">
+                <a href="Events.html">
+                <img src="images/PrapanchaSangeethaSammelan2021.jpeg"  class="img-fluid" style="height: 300%;width:100%;display: grid;max-height: 100vh;">
+              </a>
+              </div>
+            <div class="carousel-item">
               <div>
 
                 <a href="AboutUs.html">
